# solana-safety-checker

./: .env  .env.example  DEPLOYMENT.md  ENHANCED_WEB_README.md  GUI_README.md  README.md  WEB_GUI_README.md  launch_gui.sh  launch_web.py  launch_web.sh  pyproject.toml  requirements.txt  run_gui.py  server.js  setup.py  sol_safety_check_gui.py  sol_safety_check_web.py
api/: index.js  index.py
sol_safety_check/: __init__.py  cli.py  models.py  utils.py
sol_safety_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sol_safety_check/datasources/: __init__.py  birdeye.py  dexscreener.py  pumpfun.py  rugcheck.py  solana_chain.py
sol_safety_check/risk/: __init__.py  rules.py  scoring.py
tests/: __init__.py  test_risk_rules.py  test_scoring.py
